// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen — array-response fixture (array-root response, non-ref item kinds) > generates the expected set of files 1`] = `
[
  "controllers/array/array.module.svelte.ts",
  "controllers/array/array.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — colliding-routes fixture > generates the expected set of files 1`] = `
[
  "controllers/package-tenant/package-tenant.module.svelte.ts",
  "controllers/package-tenant/package-tenant.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — minimal fixture > generates the expected set of files 1`] = `
[
  "controllers/notification/notification.module.svelte.ts",
  "controllers/notification/notification.schema.svelte.ts",
  "controllers/user/user.module.svelte.ts",
  "controllers/user/user.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — nested-objects fixture (inline objects & arrays-of-object) > generates the expected set of files 1`] = `
[
  "controllers/calendar/calendar.module.svelte.ts",
  "controllers/calendar/calendar.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — optional-array-bundle fixture (optional/nullable arrays of refs) > generates the expected set of files 1`] = `
[
  "controllers/package/package.module.svelte.ts",
  "controllers/package/package.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — query-array-and-bad-enum fixture > generates the expected set of files 1`] = `
[
  "controllers/item/item.module.svelte.ts",
  "controllers/item/item.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;

exports[`codegen — sibling-lists fixture (two list-typed methods, different names) > generates the expected set of files 1`] = `
[
  "controllers/ai-chat-tenant/ai-chat-tenant.module.svelte.ts",
  "controllers/ai-chat-tenant/ai-chat-tenant.schema.svelte.ts",
  "enums.ts",
  "fields.ts",
  "mocked-params.svelte.ts",
  "reflector.svelte.ts",
]
`;
